--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 node_modules/
 dist/terraform/.terraform/
 dist/terraform/terraform.tfstate*
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
